--- a/src/app/pages/activityfeedposting/activityfeedposting.page.html
+++ b/src/app/pages/activityfeedposting/activityfeedposting.page.html
@@ -40,7 +40,7 @@
       <ion-grid *ngIf=browserButtons>
         <ion-row>
           <ion-col size="3">
-            <ion-button expand="full" color="tertiary" (click)="closeModal('Cancel')">
+            <ion-button expand="block" color="tertiary" (click)="closeModal('Cancel')">
               Cancel
             </ion-button>
           </ion-col>
@@ -48,7 +48,7 @@
             <p style="text-align:center;">Please use the mobile app to upload an image</p>
           </ion-col>
           <ion-col size="3">
-            <ion-button expand="full" color="tertiary" (click)="closeModal('Save')">
+            <ion-button expand="block" color="tertiary" (click)="closeModal('Save')">
               Save
             </ion-button>
           </ion-col>
