--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -116,17 +116,33 @@
 		<!-- List of attendee postings -->
 		<ion-card *ngFor="let activityFeedItem of activityFeedListing; index as i">
 		  
-		  <!-- Attendee avatar and name -->
-		  <ion-item lines="none" id="afID{{activityFeedItem.afID}}">
-			<ion-avatar slot="start" (click)="AttendeeDetails(activityFeedItem.AttendeeID)">
-			  <!--<img-loader [src]="activityFeedItem.ActivityFeedCommentAvatar" useImg [spinner]=false [fallbackAsPlaceholder]=true></img-loader>-->
-			  <img src="{{activityFeedItem.ActivityFeedCommentAvatar}}" onerror="this.src='assets/img/personIcon.png'">
-			</ion-avatar>
-			<div (click)="AttendeeDetails(activityFeedItem.AttendeeID)">
-			<h5>{{activityFeedItem.ActivityFeedCommentBy}}</h5>
-			<ion-label>{{activityFeedItem.ActivityFeedCommentPosted}}</ion-label>
-			</div>
-		  </ion-item>
+  <!-- Attendee avatar and name -->
+  <ion-item lines="none" id="afID{{activityFeedItem.afID}}">
+      <ion-avatar slot="start" (click)="AttendeeDetails(activityFeedItem.AttendeeID)">
+        <!--<img-loader [src]="activityFeedItem.ActivityFeedCommentAvatar" useImg [spinner]=false [fallbackAsPlaceholder]=true></img-loader>-->
+        <img src="{{activityFeedItem.ActivityFeedCommentAvatar}}" onerror="this.src='assets/img/personIcon.png'">
+      </ion-avatar>
+      <div (click)="AttendeeDetails(activityFeedItem.AttendeeID)">
+      <ion-label><b>{{activityFeedItem.ActivityFeedCommentBy}}</b></ion-label>
+      <ion-label>{{activityFeedItem.ActivityFeedCommentPosted}}</ion-label>
+      </div>
+    </ion-item>
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+      
+         <!-- Posting picture attachment -->
+         <img src="{{activityFeedItem.ActivityFeedAttachment}}" (click)="ActivityFeedDetails(activityFeedItem, activityFeedItem.afID)">
 	  	  
 		  <!-- Attendee's comment -->
 		  <ion-card-content [innerHTML]="activityFeedItem.ActivityFeedComment" (click)="ActivityFeedDetails(activityFeedItem, activityFeedItem.afID)">
@@ -150,11 +166,63 @@
 
 		<ion-item class="ion-text-wrap" style="color:#444" *ngFor="let notification of NotificationListing">
 			<ion-icon slot="start" color="tertiary" name="text"></ion-icon>
-			<div [innerHTML]="notification.pushNotification">
-			</div>
+			<ion-label [innerHTML]="notification.pushNotification">
+      </ion-label>
 		</ion-item>
 
+  </ion-list>
+  
+
+ <!--EXPANDABLE MENU 
+	<ion-list (click)="expandItem(item)" *ngFor="let item of items" style="margin-top:-10px">
+		<ion-item style="background: rgba(0, 0, 0, 0.5); color:#fff">More...</ion-item>
+		<app-expandable expandHeight="2000px" [expanded]="item.expanded">
+		   
+			<ion-item style="background:transparent!important; color:#444" routerLink="/myagendafull">Full Agenda</ion-item>
+			<ion-item style="background:transparent!important; color:#444" routerLink="/attendees">Attendees</ion-item>
+			<ion-item style="background:transparent!important; color:#444" routerLink="/login">Login</ion-item>
+			<ion-item style="background:transparent!important; color:#444" routerLink="/more">More</ion-item>
+			<ion-item style="background:transparent!important; color:#444" routerLink="/networking">Networking</ion-item>
+			<ion-item style="background:transparent!important; color:#444" routerLink="/notes">Notes</ion-item>
+			<ion-item style="background:transparent!important; color:#444" routerLink="/help">Help</ion-item>
+			<ion-item style="background:transparent!important; color:#444" routerLink="/home">Home</ion-item>
+			<ion-item style="background:transparent!important; color:#444" routerLink="/listinglevel1">listinglevel1</ion-item>
+			<ion-item style="background:transparent!important; color:#444" routerLink="/Map">Maps</ion-item>
+			<ion-item style="background:transparent!important; color:#444" routerLink="/modal">modal</ion-item>
+			<ion-item style="background:transparent!important; color:#444" routerLink="/myagenda">My Agenda</ion-item>
+			<ion-item style="background:transparent!important; color:#444" routerLink="/notesdetails">Notes Details</ion-item>
+			<ion-item style="background:transparent!important; color:#444" routerLink="/notifications">Notifications</ion-item>
+			<ion-item style="background:transparent!important; color:#444" routerLink="/profile">Profile</ion-item>
+			<ion-item style="background:transparent!important; color:#444" routerLink="/program">Program</ion-item>
+			<ion-item style="background:transparent!important; color:#444" routerLink="/searchbytopic">Search by Topic</ion-item>
+			<ion-item style="background:transparent!important; color:#444" routerLink="/social">Social Media</ion-item>
+			<ion-item style="background:transparent!important; color:#444" routerLink="/speakers">Presenters</ion-item>
+			<ion-item style="background:transparent!important; color:#444" routerLink="/sponsors">Sponsors</ion-item>
+			<ion-item style="background:transparent!important; color:#444" routerLink="/speakerdetails">Presenter Details</ion-item>
+			<ion-item style="background:transparent!important; color:#444" routerLink="/activityfeedcomment">Activity Feed Comment</ion-item>
+			<ion-item style="background:transparent!important; color:#444" routerLink="/activityfeeddetails">Activity Feed Details</ion-item>
+			<ion-item style="background:transparent!important; color:#444" routerLink="/activityfeedleaderboard">Activity Feed Leaderboard</ion-item>
+			<ion-item style="background:transparent!important; color:#444" routerLink="/activityfeedposting">Activity Feed Posting</ion-item>
+			<ion-item style="background:transparent!important; color:#444" routerLink="/attendeebookmarks">Attendee Bookmarks</ion-item>
+			<ion-item style="background:transparent!important; color:#444" routerLink="/attendeemessage">Attendee Message</ion-item>
+			<ion-item style="background:transparent!important; color:#444" routerLink="/activity">Activity</ion-item>
+			<ion-item style="background:transparent!important; color:#444" routerLink="/conversation">Conversation</ion-item>
+			<ion-item style="background:transparent!important; color:#444" routerLink="/conversations">Conversations</ion-item>
+			<ion-item style="background:transparent!important; color:#444" routerLink="/educationdetails">Education Details</ion-item>
+			<ion-item style="background:transparent!important; color:#444" routerLink="/database">Database</ion-item>
+			<ion-item style="background:transparent!important; color:#444" routerLink="/evaluationconference">Evaluation Conference</ion-item>
+			<ion-item style="background:transparent!important; color:#444" routerLink="/evaluationworkshop">Evaluation Workshop</ion-item>
+			<ion-item style="background:transparent!important; color:#444" routerLink="/evaluationlecture">Evaluation Lecture</ion-item>
+			<ion-item style="background:transparent!important; color:#444" routerLink="/floorplanmapping">Floor Plan Mapping</ion-item>
+			<ion-item style="background:transparent!important; color:#444" routerLink="/searchresults">Search Results</ion-item>
+			<ion-item style="background:transparent!important; color:#444" routerLink="/tabs">Tabs</ion-item>
+
+		</app-expandable>
 	</ion-list>
+    
+      -->
+
+
 
  <!--
  
