--- a/src/app/pages/activityfeeddetails/activityfeeddetails.page.html
+++ b/src/app/pages/activityfeeddetails/activityfeeddetails.page.html
@@ -136,7 +136,7 @@
 
   <ion-grid  style="background:#fff!important">
       <ion-row style="background:#fff">
-          <ion-col size="11" style="background:#fff" >
+          <ion-col size="10" style="background:#fff" >
 
       
 
@@ -152,9 +152,9 @@
 
 
 
-<ion-col size="1" style="background:#fff">
+<ion-col size="2" style="background:#fff">
               <ion-button style="background:#fff" fill="clear" (click)="SaveComment()">
-                  <ion-icon  slot="end" name="ios-send" ios="ios-send" md="md-send"></ion-icon>
+                  <ion-icon  slot="start" name="ios-send" ios="ios-send" md="md-send"></ion-icon>
                 </ion-button>
     
           </ion-col>
