--- a/src/global.scss
+++ b/src/global.scss
@@ -164,6 +164,8 @@ ion-toolbar ion-menu-button {
 }
 
 
+//ION_SELECT
+
 
 
 
@@ -1069,7 +1071,6 @@ padding:0;
 		margin-right:-20px !important;
 		margin-bottom:0px;
 		margin-left:-20px;
-		margin-right:0;
 		padding-left:10px;
 		height:463px;
 		z-index:-2!important;
@@ -1445,7 +1446,7 @@ padding:0;
 		background-color:rgba(15, 59, 95, 0.753)  !important;
 		color:#fff !important;
 		margin-top:0px;
-		margin-right:0 px!important;
+		margin-right:0px!important;
 		margin-bottom:0px;
 		margin-left:25px;
 		padding-top:0;
