--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -12,55 +12,90 @@
 	<ion-grid>
 
 		<!-- Avatar row to show when using a device; allows updating image -->
-		<ion-row *ngIf=avatarDevice>
+		<ion-row><!--*ngIf=avatarDevice-->
 			<ion-col size="6" lines="none">
-					<ion-avatar style="margin-left:25%; margin-top:15px">
+					<ion-avatar style="margin-left:25%; margin-top:20%">
 						<img [src]="_DomSanitizer.bypassSecurityTrustUrl(visualImageURL)" 
 						(click)="UploadImage()" onerror="this.src='assets/img/missing-image.png'">
 					</ion-avatar>
+				
 			</ion-col>
 
-			<ion-col size="6">
-					<ion-label style="color:#fff; font-size:14px; font-weight:600; margin-top:130px">
+			<ion-col size="6" style="margin-top:18%">
+				
+					<ion-label style="color:#fff; font-size:14px; font-weight:600; padding-top:30%">
 						Tap the image to change your profile picture</ion-label>
+			
 			</ion-col>
 		</ion-row>
-		
-		<!-- Avatar row to show when using a browser; static image -->
-		<ion-row *ngIf=avatarBrowser>
-			<ion-col size="6" lines="none">
-				<ion-avatar style="margin-left:25%; margin-top:15px; display: block;">
-					<img [src]="visualImageURL" onerror="this.src='assets/img/missing-image.png'">
-				</ion-avatar>
-			</ion-col>
+	</ion-grid>
 
+
+
+
+	<!-- Avatar row to show when using a browser; static image -->
+<!--
+
+	<ion-grid>
 	
+
+		<ion-row>  *ngIf=
 			<ion-col size="6">
-				<p style="text-align:center;color:#fff; margin-top:150px">Edit information that other attendees see 
-				when viewing your profile.<span *ngIf=avatarBrowser>&nbsp; Update your profile 
-				image from your mobile device.</span></p>
+				<ion-item>
+					<ion-avatar>
+						<img [src]="visualImageURL" onerror="this.src='assets/img/missing-image.png'">
+					</ion-avatar>
+				</ion-item>
+			</ion-col>
+
+			<ion-col size="6">
+				<ion-item style=" margin-top:10%">
+					<p class="ion-text-wrap" style="background:transparent;color:#fff;font-size:14px"></p>
+				</ion-item>
+			</ion-col>
+		</ion-row>
+	</ion-grid>
+
+-->
+
+
+
+	<ion-grid>
+		<ion-row>
+			<ion-col>
+				<p style="text-align:center;color:#fff; margin-top:50px">Edit information that other attendees see 
+					when viewing your profile.</p>
+				
+				
+				<!-- <span *ngIf=avatarBrowser>&nbsp; Update your profile 
+				image from your mobile device.</span></p> -->
 			</ion-col>
 		</ion-row>
 
-		<ion-row style="margin-left:10px; margin-right:10px; margin-top:200px">
-			<ion-col>
-				<ion-item lines="none" style="color:#fff; padding-left:12px">{{prAttendeeName}}</ion-item>
+		<ion-row style="color:#fff!important">
+			<ion-col style="color:#fff!important">
+				<ion-item lines="none" style="color:#fff!important">{{prAttendeeName}}</ion-item>
 			</ion-col>
 		</ion-row>
-		<ion-row style="margin-left:10px; margin-right:10px">
-			<ion-col>
-				<ion-item>
-					<ion-input class="InputBoxW" type="text" placeholder="Job Title" (input)='prAttendeeTitle = $event.target.value' 
+
+		
+		<ion-row style="color:#fff">
+			<ion-col style="color:#fff">
+				<ion-item lines="none">
+					<ion-input type="text" placeholder="Job Title" (input)='prAttendeeTitle = $event.target.value' 
 					name="prAttendeeTitle" [value]="prAttendeeTitle" id="prAttendeeTitle"></ion-input>
 				</ion-item>
 			</ion-col>
 		</ion-row>
-		<ion-row style="margin-left:10px; margin-right:10px">
+		<ion-row>
 			<ion-col>
-				<ion-item>
+				<ion-item lines="none">
 					<ion-input type="text" placeholder="Organization Name" (input)='prAttendeeOrganization = $event.target.value' 
 					name="prAttendeeOrganization" [value]="prAttendeeOrganization" id="prAttendeeOrganization"></ion-input>
 				</ion-item>
+
+
+
 
 			</ion-col>
 		</ion-row>
@@ -92,22 +127,23 @@
 			<ion-col size="1">
 			</ion-col>
 			<ion-col size="2">
-				<ion-icon [ngClass]="statusTwitter" name="logo-twitter" (click)="EditSocialMediaLinks('statusTwitter')"></ion-icon>
+				<ion-icon color="light" name="logo-twitter" (click)="EditSocialMediaLinks('statusTwitter')"></ion-icon>
 			</ion-col>
 			<ion-col size="2">
-				<ion-icon [ngClass]="statusFacebook" name="logo-facebook" (click)="EditSocialMediaLinks('statusFacebook')"></ion-icon>
+				<ion-icon color="light" name="logo-facebook" (click)="EditSocialMediaLinks('statusFacebook')"></ion-icon>
 			</ion-col>
 			<ion-col size="2">
-				<ion-icon [ngClass]="statusLinkedIn" name="logo-linkedin" (click)="EditSocialMediaLinks('statusLinkedIn')"></ion-icon>
+				<ion-icon color="light" name="logo-linkedin" (click)="EditSocialMediaLinks('statusLinkedIn')"></ion-icon>
 			</ion-col>
 			<ion-col size="2">
-				<ion-icon [ngClass]="statusInstagram" name="logo-instagram" (click)="EditSocialMediaLinks('statusInstagram')"></ion-icon>
+				<ion-icon color="light" name="logo-instagram" (click)="EditSocialMediaLinks('statusInstagram')"></ion-icon>
 			</ion-col>
 			<ion-col size="2">
-				<ion-icon [ngClass]="statusPinterest" name="logo-pinterest" (click)="EditSocialMediaLinks('statusPinterest')"></ion-icon>
+				<ion-icon color="light" name="logo-pinterest" (click)="EditSocialMediaLinks('statusPinterest')"></ion-icon>
 			</ion-col>
 		</ion-row>
 	</ion-grid>
+
 
 
 </ion-content>
