--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -12,60 +12,38 @@
 	<ion-grid>
 
 		<!-- Avatar row to show when using a device; allows updating image -->
-		<ion-row><!--*ngIf=avatarDevice-->
+		<ion-row *ngIf=avatarDevice>
 			<ion-col size="6" lines="none">
 					<ion-avatar style="margin-left:25%; margin-top:20%">
 						<img [src]="_DomSanitizer.bypassSecurityTrustUrl(visualImageURL)" 
 						(click)="UploadImage()" onerror="this.src='assets/img/missing-image.png'">
 					</ion-avatar>
-				
 			</ion-col>
 
 			<ion-col size="6" style="margin-top:18%">
-				
 					<ion-label style="color:#fff; font-size:14px; font-weight:600; padding-top:30%">
 						Tap the image to change your profile picture</ion-label>
-			
 			</ion-col>
 		</ion-row>
 	</ion-grid>
 
 
-
-
-	<!-- Avatar row to show when using a browser; static image -->
-<!--
-
 	<ion-grid>
-	
+	<!-- Avatar row to show when using a browser; static image -->
+		<ion-row  *ngIf=avatarBrowser>
 
-		<ion-row>  *ngIf=
-			<ion-col size="6">
-				<ion-item>
+			<ion-col>
 					<ion-avatar>
 						<img [src]="visualImageURL" onerror="this.src='assets/img/missing-image.png'">
 					</ion-avatar>
-				</ion-item>
 			</ion-col>
 
-			<ion-col size="6">
-				<ion-item style=" margin-top:10%">
-					<p class="ion-text-wrap" style="background:transparent;color:#fff;font-size:14px"></p>
-				</ion-item>
-			</ion-col>
 		</ion-row>
-	</ion-grid>
 
--->
-
-
-
-	<ion-grid>
 		<ion-row>
 			<ion-col>
-				<p style="text-align:center;color:#fff; margin-top:50px">Edit information that other attendees see 
+				<p style="text-align:center;color:#fff">Edit information that other attendees see 
 					when viewing your profile.</p>
-				
 				
 				<!-- <span *ngIf=avatarBrowser>&nbsp; Update your profile 
 				image from your mobile device.</span></p> -->
