--- a/src/app/pages/profile/profile.page.scss
+++ b/src/app/pages/profile/profile.page.scss
@@ -7,26 +7,24 @@ ion-icon {
     font-size:30px;
 }
 
-ion-avatar img  {
-    width: 25vw !important;
-    height: 25vw !important;
-    max-width: 300px !important;
-    max-height: 300px !important;
+ion-avatar  {
+
+ 
+    width: 22vw !important;
+    height: 22vw !important;
+    display:block;
+    margin-left:auto;
+    margin-right:auto;
+    width: 50%;
+
 }
 
 ion-icon {
     font-size: 50px;
 }
 
-.avatar {
-    vertical-align: middle;
-    width: 25vw !important;
-     height: 25vw !important;
-    font-size: 3.5em;
-}
-
 ion-input {
-    margin-left:4px;
+    padding-left:4px;
     background:#fff;
 }
 
@@ -40,3 +38,5 @@ ion-padding-start {
 .smInactive {
 	color: white;
 }
+
+
