--- a/src/app/pages/searchbytopic/searchbytopic.page.scss
+++ b/src/app/pages/searchbytopic/searchbytopic.page.scss
@@ -1,16 +1,9 @@
 
-    full-width-select {
-      max-width: 100%!important;
-      min-width: 70%!important;
-    }
-    
-    item-select .label{
-      width:70%!important;
-    }
-    
-ion-select {
-  --max-width: 100%!important;
-  --min-width: 70%!important;
+
+select-text {
   --color:#fff!important;
 }
 
+select-icon {
+  --color:#fff!important;
+}
