--- a/src/app/pages/map/map.page.html
+++ b/src/app/pages/map/map.page.html
@@ -4,14 +4,85 @@
           <ion-menu-button></ion-menu-button>
           </ion-buttons>
 		<ion-title>Maps</ion-title>
-	</ion-toolbar>
+  </ion-toolbar>
 </ion-header>
  
-
   
 <ion-content class="ion-padding">
 
-    <!--<img style="width:100%; height:100%" src="assets/img/floorplan.png" >-->
+
+
+ <!--EXPANDABLE MENU -->
+
+<ion-button expand="block" style="width:98%; margin-left:auto; margin-right:auto">TAP BELOW TO SELECT MAP</ion-button>
+
+  <ion-card (click)="expandItem('Level1')">
+      <ion-card-header color="tertiary">Level 1 - Music City Center</ion-card-header >
+      <ion-card-content>
+			<app-expandable expandHeight="700px" [expanded]="Level1">
+				<div id="mapLevel3" style="width:100%; height:750px;"></div>
+      </app-expandable>
+    </ion-card-content>
+	</ion-card>
+
+	<ion-card (click)="expandItem('Level2')">
+		<ion-card-header color="tertiary">Level 2 - Music City Center</ion-card-header>
+		<ion-card-content>
+			<app-expandable expandHeight="500px" [expanded]="Level2">
+				<div id="mapLevel4" style="width:100%; height:550px;"></div>
+			</app-expandable>
+		</ion-card-content>
+	</ion-card>
+
+	<ion-card (click)="expandItem('Level3')">
+      <ion-card-header color="tertiary">Level 3 - Music City Center</ion-card-header>
+      <ion-card-content>
+        <app-expandable expandHeight="500px" [expanded]="Level3">
+            <div id="mapLevel2" style="width:100%; height:550px;"></div>
+        </app-expandable>
+      </ion-card-content>
+    </ion-card>
+  
+
+    <ion-card (click)="expandItem('Level4')">
+        <ion-card-header color="tertiary">Level 4 - Music City Center</ion-card-header>
+        <ion-card-content>
+          <app-expandable expandHeight="600px" [expanded]="Level4">
+              <div id="mapLevel6" style="width:100%; height:650px;"></div>
+          </app-expandable>
+        </ion-card-content>
+      </ion-card>
+
+
+      <ion-card (click)="expandItem('Level5')">
+          <ion-card-header color="tertiary">Floorplan (all) Music City Center</ion-card-header>
+          <ion-card-content>
+              <app-expandable expandHeight="800px" [expanded]="Level5">
+              <div id="mapLevel7" style="width:100%; height:770px;"></div>
+            </app-expandable>
+          </ion-card-content>
+        </ion-card>
+
+        <ion-card (click)="expandItem('Level6')">
+            <ion-card-header color="tertiary">Hotels</ion-card-header>
+            <ion-card-content>
+                <app-expandable expandHeight="720px" [expanded]="Level6">
+                <div id="mapLevel8" style="width:100%; height:770px;"></div>
+              </app-expandable>
+            </ion-card-content>
+          </ion-card>
+
+          <ion-card (click)="expandItem('Level7')">
+              <ion-card-header color="tertiary">Executive Board Room (Level 3M)</ion-card-header>
+              <ion-card-content>
+                  <app-expandable expandHeight="700px" [expanded]="Level7">
+                  <div id="mapLevel5" style="width:100%; height:750px;"></div>
+                </app-expandable>
+              </ion-card-content>
+            </ion-card>
+
+
+    <!--<img style="width:100%; height:100%" src="assets/img/floorplan.png" 
 
 	<ion-card>
 		<ion-card-header>
@@ -67,7 +138,7 @@
 		<div id="mapLevel5" style="width:100%; height:740px;"></div>
 	</ion-card>
 
-
+>-->
   
   </ion-content>
   
